--- a/files/style.css
+++ b/files/style.css
@@ -1,63 +1,1 @@
-body {
-  background-color: #11a9e2;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d86b3), to(#11a9e2));
-  background-image: -moz-linear-gradient(#0d86b3, #11a9e2);
-  background-repeat: no-repeat;
-  padding: 100px;
-  text-rendering: optimizeLegibility;
-  font: 14px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-}
-a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-  -webkit-transiton: .2s all linear;
-}
-a:hover {
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-}
-h1, h2, p {
-  color: #fff;
-  color: rgba(255, 255, 255, 0.75);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-}
-h1 {
-  margin: 0;
-  font: bold 115px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #fff;
-  text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
-  -webkit-transition: .2s all linear;
-}
-h1:hover {
-  cursor: text;
-}
-h1:focus {
-  outline: none;
-}
-p {
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-}
-h2 {
-  margin: 30px 0 15px;
-  font-size: 20px;
-  font-weight: 200;
-  line-height: 25px;
-}
-pre {
-  background-color: rgba(0, 0, 0, 0.3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.15)), to(rgba(0, 0, 0, 0)));
-  background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
-  width: 650px;
-  margin: 30px auto;
-  padding: 0px;
-  color: #fff;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  border-radius: 6px;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-}
+.ir{display:block;border:0;text-indent:-999em;overflow:hidden;background-color:transparent;background-repeat:no-repeat;text-align:left;direction:ltr;*line-height:0}.ir br{display:none}.hidden{display:none!important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:"";display:table}.clearfix:after{clear:both}.clearfix{*zoom:1}@media print{*{ background:transparent!important;color:#000!important;box-shadow:none!important;text-shadow:none!important;filter:none!important;-ms-filter:none!important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100%!important}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}@font-face { font-family: arno-pro; src: url('./fonts/arno-pro.otf'); } @font-face { font-family: arno-pro; font-weight: bold; src: url('./fonts/arno-pro.otf'); }*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}body{background-color:#1c364e;font-family:"arno-pro",palatino,serif;color:#ac977b;margin:0;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;padding:20px 0;font-size:14pt}.benchmark-icon-benchmark{font-size:500px;line-height:100px;height:100px;overflow:hidden;color:#080f16;text-shadow:rgba(255,255,255,.10) 0 1px 0}.street-address{display:block}.block{float:left;width:250px;margin-bottom:10px}p{margin:0}a{font-style:normal;color:#ecbf83;text-decoration:none}a:hover{color:#f6e1c5}.content{width:500px;margin:0 auto;overflow:hidden}.copy{opacity:.7;filter:alpha(Opacity=70)}@media only screen and (min-height: 250px) and (min-width: 520px),screen and (min-height: 400px) and (max-width: 520px){body{ padding:0}.container{width:100%;height:100%;position:absolute}.container{height:100%;position:absolute;top:0;left:0}.content{position:absolute;top:50%;left:50%;margin-top:-125px;margin-left:-250px}}@media screen and (min-height: 400px) and (max-width: 520px){.content{ margin-top:-180px;margin-left:0;left:0}}@media screen and (max-width: 520px){.content{ width:100%}.benchmark-icon-benchmark{font-size:280px;text-align:center}.block{float:none;width:100%;text-align:center}}
